# melodeon

./: .gitignore  Cargo.toml  README.md  notes.md
melo_examples/: aux.melo  main.melo  output.mil
src/: codegen.rs  containers.rs  context.rs  demod.rs  grammar.pest  lib.rs  stdlib.melo  typed_ast.rs  typesys.rs
src/grammar/: ast.rs  grammar.pest  mod.rs  parser.rs  raw_ast.rs
src/typed_ast/: mod.rs  types.rs  utils.rs
src/typesys/: mod.rs  poly.rs  typecheck.rs  typed_ast.rs  types.rs
src/typesys/typecheck/: facts.rs  fold.rs  scope.rs  state.rs
