[package]
name = "melodeon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catvec = "0.1.2"
ethnum = "1.0.3"
imbl = "1.0.1"
internment = "0.5.4"
log = "0.4.14"
rustc-hash = "1.1.0"
scopeguard = "1.1.0"
smallvec = "1.7.0"
tap = "1.0.1"

[dev-dependencies]
env_logger="0.9"
