[package]
name = "melodeon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
blake3 = "1.2.0"
catvec = "0.1.2"
dashmap = "4.0.2"
defmac = "0.2.1"
derive_more = "0.99.16"
ethnum = "1.0.3"
imbl = "1.0.1"
internment = "0.5.4"
lexpr = "0.2.6"
log = "0.4.14"
maplit = "1.0.2"
pest = "2.1.3"
pest_derive = "2.1.0"
rustc-hash = "1.1.0"
scopeguard = "1.1.0"
smallvec = "1.7.0"
tap = "1.0.1"
thiserror = "1.0.30"

[dev-dependencies]
env_logger="0.9"
