[package]
name = "melodeon"
version = "0.4.17"
edition = "2021"
description = "High-level language that targets the Themelio blockchains' MelVM covenants"
license = "ISC"
repository="https://github.com/themeliolabs/melodeon-rs"
homepage="https://themelio.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
argh = "0.1.6"
blake3 = "1.2.0"
bytes = "1.1.0"
catvec = "0.1.2"
colored = "2.0.0"
dashmap = "4.0.2"
defmac = "0.2.1"
derive_more = "0.99.16"
env_logger = "0.9.0"
ethnum = "1.0.3"
hex = "0.4.3"
imbl = {version = "1.0.1", features=["rayon"]}
internment = "0.5.4"
lexpr = "0.2.6"
log = "0.4.14"
maplit = "1.0.2"
once_cell = "1.8.0"
pest = "2.1.3"
pest_derive = "2.1.0"
rayon = "1.5.1"
rustc-hash = "1.1.0"
scopeguard = "1.1.0"
smallvec = "1.7.0"
snailquote = "0.3.1"
tap = "1.0.1"
thiserror = "1.0.30"

[dev-dependencies]
env_logger="0.9"

# [target.'cfg(fuzzing)'.dependencies] 
# honggfuzz= "0.5.54"
# env_logger= "0.9"
